# MNIST_recognition_in_rust

./: .gitignore  Cargo.toml  README.md
mnist_recognition/: .gitignore  Cargo.toml
mnist_recognition/src/: dataset.rs  layers.rs  main.rs  model.rs
mnist_recognition/src/layers/: dataset.rs  digits.rs  layer.rs  relu.rs  softmax.rs
mnist_recognition/src/model/: mod.rs
mnist_recognition/src/model/dataset/: mod.rs
src/: layers.rs  main.rs  model.rs
src/layers/: dataset.rs  layer.rs  relu.rs  softmax.rs
