[package]
name = "mnist_recognition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mnist = "0.5.0"
ndarray = {version = "0.15", features = ["blas"]}
blas-src = { version = "0.8.0", default-features = false, features = ["accelerate"] }
rand = "0.8"
ndarray-rand = "0.14"
rayon = "1.5.3"
